--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Cosmos</title>
 </head>
 <body>
-	<object data="game.wf" width="100%" height="620px">
+	<object data="game.swf" width="100%" height="620px">
 		<p style="text-align: center;">
 			Normally you would see a game here, but you don't have Flash installed.<br>
 			No worries, you can always <a href="http://get.adobe.com/flashplayer/" target="_blank">install it here</a>!
